--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -3,18 +3,11 @@
              xmlns:local="clr-namespace:CSimple.Pages"
              xmlns:v="clr-namespace:CSimple.Views"
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-             xmlns:converters="clr-namespace:CSimple.Converters"
+             xmlns:sys="clr-namespace:System;assembly=netstandard"
              ios:Page.UseSafeArea="True"
              Title="Action"
              Shell.NavBarIsVisible="{OnIdiom True, Desktop=False}"
              x:Class="CSimple.Pages.ActionPage">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <converters:BoolToTextConverter x:Key="BoolToTextConverter"
-                                            TrueText="Stop"
-                                            FalseText="Start" />
-        </ResourceDictionary>
-    </ContentPage.Resources>
     <AbsoluteLayout>
         <ScrollView AbsoluteLayout.LayoutFlags="All"
                     AbsoluteLayout.LayoutBounds="0,0,1,1">
@@ -46,6 +39,27 @@
                                     <Label Text="{Binding Data.ActionGroupObject.ActionName}" TextColor="White" />
                                     <Label Text="{Binding createdAt}" TextColor="Gray" />
                                     <Label Text="{Binding Creator}" TextColor="Gray" />
+                                    <ListView ItemsSource="{Binding Data.files}">
+                                        <ListView.ItemTemplate>
+                                            <DataTemplate>
+                                                <ViewCell>
+                                                    <VerticalStackLayout>
+                                                        <Label Text="{Binding Filename}" TextColor="Gray" />
+                                                        <Image Source="{Binding Data, Converter={StaticResource Base64ToImageConverter}}" Aspect="AspectFit" WidthRequest="100">
+                                                            <Image.Triggers>
+                                                                <DataTrigger TargetType="Image" Binding="{Binding Data}" Value="{x:Static sys:String.Empty}">
+                                                                    <Setter Property="IsVisible" Value="False" />
+                                                                </DataTrigger>
+                                                                <DataTrigger TargetType="Image" Binding="{Binding Data}" Value="{x:Null}">
+                                                                    <Setter Property="IsVisible" Value="False" />
+                                                                </DataTrigger>
+                                                            </Image.Triggers>
+                                                        </Image>
+                                                    </VerticalStackLayout>
+                                                </ViewCell>
+                                            </DataTemplate>
+                                        </ListView.ItemTemplate>
+                                    </ListView>
                                 </VerticalStackLayout>
                             </Frame>
                         </DataTemplate>
