--- a/src/CSimple/Pages/HomePage.xaml
+++ b/src/CSimple/Pages/HomePage.xaml
@@ -37,8 +37,7 @@
                        HorizontalOptions="Center"
                        VerticalOptions="StartAndExpand" />
                 <Button Text="Get Started"
-                        Command="{Binding NavigateCommand}"
-                        CommandParameter="login"
+                        Clicked="OnGetStartedClicked"
                         HorizontalOptions="Center"
                         VerticalOptions="CenterAndExpand" />
                 <FlexLayout IsVisible="{OnIdiom Phone=False, Default=True}"
