Revert "fixed get starte dnativation"
This reverts commit 86eed5904a3389aa3d00e90f81352e2d1b1c4940.

--- a/src/CSimple/Pages/HomePage.xaml
+++ b/src/CSimple/Pages/HomePage.xaml
@@ -37,7 +37,8 @@
                        HorizontalOptions="Center"
                        VerticalOptions="StartAndExpand" />
                 <Button Text="Get Started"
-                        Clicked="OnGetStartedClicked"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="login"
                         HorizontalOptions="Center"
                         VerticalOptions="CenterAndExpand" />
                 <FlexLayout IsVisible="{OnIdiom Phone=False, Default=True}"
