Revert "addede app name to header"
This reverts commit e67820067eef8eb9f45bb1b2dfeea7fba78acb19.

--- a/src/CSimple/App.xaml
+++ b/src/CSimple/App.xaml
@@ -9,8 +9,7 @@
     <Application.MainPage>
         <Shell FlyoutWidth="200"
                FlyoutBackgroundColor="{StaticResource Background_Mid}"
-               FlyoutBehavior="Flyout"
-               Title="Simple">
+               FlyoutBehavior="Flyout">
             <!-- Desktop/Tablet -->
             <FlyoutItem Title="Home"
                         Route="home"
